k8s/auth-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-deployment
  template:
    metadata:
      labels:
        app: auth-deployment
    spec:
      containers:
      - name: auth-deployment
        image: xabynix/auth-api
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  type: ClusterIP
  selector:
    app: auth-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
