k8s/rabbitmq-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    app: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-deployment
  template:
    metadata:
      name: rabbitmq-deployment
      labels:
        app: rabbitmq-deployment
    spec:
      containers:
        - name: rabbitmq-deployment
          image: rabbitmq:management
          imagePullPolicy: IfNotPresent
          ports:
            - name: connection
              containerPort: 5672
            - name: management
              containerPort: 15672
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  type: NodePort
  selector:
    app: rabbitmq-deployment
  ports:
    - name: management
      protocol: TCP
      nodePort: 30001
      port: 15672
      targetPort: 15672
    - name: connection
      port: 5672
      targetPort: 5672
