k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  labels:
    name: ingress-srv    
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: orazio.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: auth-svc
            port: 
              number: 8080
